crates/plotnik-tests/tests/04-emit/types/captures/unrelated_raw_and_builtin_errors_both_report.txt
Bad = [
  (identifier) @x
  {
    (identifier) @id
  } @x
]

Flag = (identifier) @flag :: bool
------------------ DIAGNOSTICS -------------------
error: capture `@x` has incompatible types across branches
 --> query.ptk:2:16
  |
2 |   (identifier) @x
  |                ^^
...
5 |   } @x
  |     -- and a different type here
  |
help: make every branch produce the same type, or label the branches for an enum

error: capture type `bool` requires a value that may be absent; this capture is always present
 --> query.ptk:8:27
  |
8 | Flag = (identifier) @flag :: bool
  |                           ^^^^^^^
